--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Aluno Online
 spring.datasource.url=jdbc:postgresql://localhost:5432/aluno_online
 spring.datasource.username=postgres
-spring.datasource.password=gi
+spring.datasource.password=1981
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.datasource.testWhileIdle=true spring.datasource.validationQuery=SELECT 1
